@@ -23,6 +23,8 @@ Bug Fixes:
   location (was missing quotes around the location)
 - Fixed bug where XML Actions and groovy script locations were not being
   cleaned before using as class names for groovy compiled classes
+- Fixed Entity Audit Log bug where fields not set were considered null and
+  therefore were considered changed to null and logged as such
 
 ===========================================================================
 Release 1.0.1 - 31 December 2011
